apps/cert-manager-webhook-ovh/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-webhook-ovh
  namespace: ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager-webhook-ovh
      app.kubernetes.io/name: cert-manager-webhook-ovh
  ingress:
    - ports:
        - port: https
      from:
        - namespaceSelector:
            matchLabels:
              name: cert-manager

  policyTypes:
  - Ingress
